--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "crontab-time-generator": "^1.0.6",
     "gatsby": "^2.24.26",
+    "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "get-youtube-id": "^1.0.1",
     "jquery": "^3.5.1",
+    "later": "RickCarlino/later",
     "popper.js": "^1.16.1",
+    "prettycron": "^0.10.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
